Sending custom site

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
                     <li>
                         <a class="page-scroll" href="#services">Serviços</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="page-scroll" href="#portfolio">Portfólio</a>
                     </li>
                     <li>
@@ -29,7 +29,7 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Time</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="#contact">Contato</a>
                     </li>
@@ -44,8 +44,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <!-- <div class="intro-lead-in">Welcome To Our Studio!</div> -->
-                <div class="intro-heading">Opa, tudo bom?</div>
+                <div class="intro-lead-in">Opa, tudo bom?</div>
+                <div class="intro-heading">Quer alavancar o seu negócio?</div>
                 <a href="#services" class="page-scroll btn btn-xl">Saiba mais</a>
             </div>
         </div>
