--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="icon" type="img/png" href="{{ site.baseurl }}/img/ico.png">
 
   {% include head.html %}
 
@@ -9,7 +10,7 @@
     {% include header.html %}
     {% include services.html %}
 
-    
+
 
 
     {% include contact.html %}
