--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,25 +8,25 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" method="post" action="contact_me.php" novalidate>
+                    <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="control-group form-group">
-                                    <input type="text" class="form-control" placeholder="Seu nome *" id="name" required data-validation-required-message="Por favor, insira o seu nome.">
+                                    <input type="text" class="form-control" placeholder="Seu nome *" id="_name" required data-validation-required-message="Por favor, insira o seu nome.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="control-group form-group">
-                                    <input type="email" class="form-control" placeholder="Seu email *" id="email" required data-validation-required-message="Por favor, insira seu email.">
+                                    <input type="email" class="form-control" placeholder="Seu email *" id="_email" required data-validation-required-message="Por favor, insira seu email.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="control-group form-group">
-                                    <input type="tel" class="form-control" placeholder="Seu telefone *" id="phone" required data-validation-required-message="Por favor, insira seu telefone.">
+                                    <input type="tel" class="form-control" placeholder="Seu telefone *" id="_phone" required data-validation-required-message="Por favor, insira seu telefone.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="control-group form-group">
-                                    <textarea class="form-control" placeholder="Sua mensagem *" id="message" required data-validation-required-message="Por favor, insira sua mensagem."></textarea>
+                                    <textarea class="form-control" placeholder="Sua mensagem *" id="_message" required data-validation-required-message="Por favor, insira sua mensagem."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
