Adding new section

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,15 +21,9 @@
                     <li>
                         <a class="page-scroll" href="#services">Serviços</a>
                     </li>
-                    <!-- <li>
-                        <a class="page-scroll" href="#portfolio">Portfólio</a>
-                    </li>
                     <li>
-                        <a class="page-scroll" href="#about">Sobre</a>
+                        <a class="page-scroll" href="#tools">Ferramentas</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#team">Time</a>
-                    </li> -->
                     <li>
                         <a class="page-scroll" href="#contact">Contato</a>
                     </li>
@@ -44,8 +38,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Opa, tudo bom?</div>
-                <div class="intro-heading">Quer alavancar o seu negócio?</div>
+                <div class="intro-lead-in">Opa, tudo bom!</div>
+                <div class="intro-heading">Quer gerar valor?</div>
                 <a href="#services" class="page-scroll btn btn-xl">Saiba mais</a>
             </div>
         </div>
