--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,7 +14,7 @@
                     <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                   </span>
                   <h4 class="service-heading">Soluções web</h4>
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                  <p class="text-muted">Precisa automatizar algum processo ou  pretende desenvovler uma plataforma? Com soluções web você está pronto para fazer a diferença.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -22,7 +22,7 @@
                         <i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Mobile</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Aplicativos mobile estão cada vez mais em alta, que tal fazer parte desde grande mercado?</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -30,7 +30,7 @@
                         <i class="fa fa-money fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Valor</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Com a Central, nós buscamos sempre colaborar com o cliente garantindo que seu negócio cresça e gere mais valor.</p>
                 </div>
             </div>
         </div>
