--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -11,7 +11,7 @@ body {
 }
 
 .text-muted {
-    #{{ site.data.template.color.muted }};
+    color: #{{ site.data.template.color.muted }};
 }
 
 .text-primary {
@@ -498,11 +498,11 @@ section h3.section-subheading {
     border-radius: 100%;
     text-align: center;
     color: #fff;
-    background-color: #{{ site.data.template.color.primary }};
+    background-color: white;
 }
 
 .timeline>li .timeline-image h4 {
-    margin-top: 12px;
+    margin-top: 50px;
     font-size: 10px;
     line-height: 14px;
 }
