--- a/_includes/tools.html
+++ b/_includes/tools.html
@@ -1,10 +1,10 @@
 <!-- About Section -->
-    <section id="about">
+    <section id="tools">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Ferramentas que utilizamos</h2>
+                    <h3 class="section-subheading text-muted">A Central se preocupa em sempre se manter atualizada!</h3>
                 </div>
             </div>
             <div class="row">
@@ -12,33 +12,32 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/tools/ruby.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>Tecnologias</h4>
+                                    <h4 class="subheading"></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Buscamos sempre usar a tecnologia que mais adequa a seu problema, evitando problemas durante o desenvolvimento. </p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/tools/scrum.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>Metodologias ágeis </h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Para colaborarmos com o cliente mantendo ele sempre perto do desenvolvimento, usamos de metologias ágeis como o Scrum. </p>
                                 </div>
                             </div>
                         </li>
-                        <li>
+                        <!-- <li>
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
                             </div>
@@ -72,7 +71,7 @@
                                     <br>Of Our
                                     <br>Story!</h4>
                             </div>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
