--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     {% include header.html %}
     {% include services.html %}
 
-
+    {% include tools.html %}
     {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
