--- a/_includes/tools.html
+++ b/_includes/tools.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Ferramentas que utilizamos</h2>
-                    <h3 class="section-subheading text-muted">A Central se preocupa em sempre se manter atualizada!</h3>
+                    <h2 class="section-heading">Ferramentas</h2>
+                    <h3 class="section-subheading text-muted">A Central se preocupa em sempre se manter atualizada!</h3>#e7f3f6
                 </div>
             </div>
             <div class="row">
