--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -354,6 +354,10 @@ section h3.section-subheading {
     text-transform: none;
 }
 
+#tools {
+  background-color: #e7f3f6;
+}
+
 #portfolio .portfolio-item {
     right: 0;
     margin: 0 0 15px;
