--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,7 +38,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Opa, tudo bom!</div>
+                <div class="intro-lead-in">Tudo bom?</div>
                 <div class="intro-heading">Quer gerar valor?</div>
                 <a href="#services" class="page-scroll btn btn-xl">Saiba mais</a>
             </div>
